[tool.poetry]
name = "test-repo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "==3.10.13"
torch = "^2.1.2"
transformers = "^4.36.2"
ipython = "^8.19.0"
numpy = "^1.26.3"
einops = "^0.7.0"
accelerate = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
